--- a/automation/hvac_downstairs_cool.yaml
+++ b/automation/hvac_downstairs_cool.yaml
@@ -1,69 +1,62 @@
 #####################################################################
 ### AC - Downstairs Upper Limit Reached
 #####################################################################
-
 - alias: cool downstairs if too hot
   trigger:
     - platform: numeric_state
       entity_id: sensor.2gig_technologies_ct101_thermostat_iris_temperature_18_1
-      above: 84
+      above: 83
 
-# kick the AC on for 3 hours
   action:
-    - service: script.cool_downstairs_180min
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_ac
+        value: 77
+
+    - delay: 00:60:00
+
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_ac
+        value: 80
 
 #####################################################################
-### AC - Downstairs Lower Limit Reached
+### AC - Downstairs Comfort Zone Reached
 #####################################################################
-
-- alias: turn ac off once comfortable
+- alias: downstairs comfort zone reached
   trigger:
     - platform: numeric_state
       entity_id: sensor.2gig_technologies_ct101_thermostat_iris_temperature_18_1
-      below: 77
-
-  condition:
-    - condition: state
-      entity_id: script.cool_downstairs_180min
-      state: 'on'
-
-  action:
-    - service: script.turn_off
-      entity_id: script.cool_downstairs_180min
-
-    - service: climate.set_temperature
-      entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2
-      data:
-        temperature: 82
-
-#####################################################################
-### AC - Downstairs trigger on temperature
-#####################################################################
-
-- alias: downstairs cooling triggered
-  trigger:
-    - platform: numeric_state
-      entity_id: sensor.2gig_technologies_ct101_thermostat_iris_temperature_18_1
-      above: 79.5
-
-    - platform: time
-      after: '17:59:59'
-
-#    - platform: template
-#      value_template: "{% if is_state('sensor.hvac_downstairs_climate', 'Hot') %}true{% endif %}"
+      below: 78
 
   condition:
     - condition: state
       entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2
       state: 'Cool'
 
-    - condition: state
-      entity_id: sensor.hvac_downstairs_climate
-      state: 'Hot'
+  action:
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_ac
+        value: 80
 
-    - condition: state
+#####################################################################
+### AC - Downstairs Cooling Trigger
+#####################################################################
+- alias: downstairs cooling triggered
+  trigger:
+    - platform: state
+      entity_id: sensor.ds_climate_control
+      to: 'Hot'
+
+    - platform: state
       entity_id: input_boolean.peak_hours
-      state: 'off'
+      to: 'off'
+
+  condition:
+    - condition: state
+      entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2
+      state: 'Cool'
 
     - condition: state
       entity_id: input_boolean.after_hours
@@ -79,31 +72,24 @@
           entity_id: input_boolean.visitor_mode
           state: 'on'
 
-# kick the AC on for 3 hours
   action:
-    - service: script.cool_downstairs_180min
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_ac
+        value: 76
 
 #####################################################################
 ### AC - Downstairs Weekday mornings
 #####################################################################
-
 - alias: downstairs cooling weekday mornings
   trigger:
     - platform: time
-      after: '04:14:59'
+      after: '05:14:59'
 
   condition:
     - condition: state
       entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2
       state: 'Cool'
-
-    - condition: state
-      entity_id: sensor.hvac_downstairs_climate
-      state: 'Hot'
-
-    - condition: state
-      entity_id: script.cool_downstairs_180min
-      state: 'off'
 
     - condition: time
       weekday:
@@ -123,14 +109,15 @@
           entity_id: input_boolean.visitor_mode
           state: 'on'
 
-# kick the AC on for 3 hours
   action:
-    - service: script.cool_downstairs_180min
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_ac
+        value: 77
 
 #####################################################################
 ### AC - Downstairs weekends
 #####################################################################
-
 - alias: downstairs cooling weekends
   trigger:
     - platform: time
@@ -143,14 +130,6 @@
     - condition: state
       entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2
       state: 'Cool'
-
-    - condition: state
-      entity_id: sensor.hvac_downstairs_climate
-      state: 'Hot'
-
-    - condition: state
-      entity_id: script.cool_downstairs_180min
-      state: 'off'
 
     - condition: time
       weekday:
@@ -167,14 +146,15 @@
           entity_id: input_boolean.visitor_mode
           state: 'on'
 
-# kick the AC on for 3 hours
   action:
-    - service: script.cool_downstairs_180min
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_ac
+        value: 77
 
 #####################################################################
-### AC - Turn up the AC when bedtime is triggered
+### AC - Raise temp at bedtime or after hours
 #####################################################################
-
 - alias: cool downstairs bedtime
   trigger:
     - platform: state
@@ -193,31 +173,7 @@
       state: 'Cool'
 
   action:
-    - service: script.turn_off
-      entity_id: script.cool_downstairs_180min
-
-    - service: climate.set_temperature
-      entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2
-      data:
-        temperature: 82
-
-#####################################################################
-### AC - Cool down when we return
-#####################################################################
-
-- alias: cool downstairs upon arrival
-  trigger:
-    platform: state
-    entity_id: group.family
-    from: 'off'
-    to: 'on'
-    for:
-      minutes: 2
-
-  condition:
-    - condition: state
-      entity_id: sensor.hvac_downstairs_climate
-      state: 'Hot'
-
-  action:
-    - service: script.cool_downstairs_120min
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_ac
+        value: 81
