--- a/automation/unlock_notify_entry.yaml
+++ b/automation/unlock_notify_entry.yaml
@@ -1,3 +1,6 @@
+#####################################################################
+### Notify when south door is unloked via code
+#####################################################################
 - alias: notify unlock entry
   hide_entity: True
   trigger:
@@ -6,7 +9,6 @@
     state: '19'
 
   action:
-
     - service: notify.pushbullet
       data:
         title: "Door Unlocked"
