--- a/configuration.yaml
+++ b/configuration.yaml
@@ -85,26 +85,47 @@ http:
 ### IOS CONFIG
 #####################################################################
 ios:
-  push_categories:
-    - name: Alarm
-      identifier: 'ALARM'
-      actions:
-        - identifier: 'SOUND_ALARM'
-          title: 'Sound Alarm'
-          activationMode: 'background'
-          authenticationRequired: yes
-          destructive: yes
-          behavior: 'default'
-          context: 'default'
-        - identifier: 'SILENCE_ALARM'
-          title: 'Silence Alarm'
-          activationMode: 'background'
-          authenticationRequired: yes
-          destructive: no
-          behavior: 'TextInput'
-          context: 'default'
-          textInputButtonTitle: 'Acknowledge'
-          textInputPlaceholder: '...'
+#  push:
+#    categories:
+#      - name: Alarm
+#        identifier: 'ALARM'
+#        actions:
+#          - identifier: 'SOUND_ALARM'
+#            title: 'Sound Alarm'
+#            activationMode: 'background'
+#            authenticationRequired: yes
+#            destructive: yes
+#            behavior: 'default'
+#          - identifier: 'SILENCE_ALARM'
+#            title: 'Silence Alarm'
+#            activationMode: 'background'
+#            authenticationRequired: yes
+#            destructive: no
+#            behavior: 'textInput'
+#            textInputButtonTitle: 'Silencio!'
+#            textInputPlaceholder: 'Placeholder'
+
+### Beta Config - 
+#  push_categories:
+#    - name: Alarm
+#      identifier: 'ALARM'
+#      actions:
+#        - identifier: 'SOUND_ALARM'
+#          title: 'Sound Alarm'
+#          activationMode: 'background'
+#          authenticationRequired: yes
+#          destructive: yes
+#          behavior: 'default'
+#          context: 'default'
+#        - identifier: 'SILENCE_ALARM'
+#          title: 'Silence Alarm'
+#          activationMode: 'background'
+#          authenticationRequired: yes
+#          destructive: no
+#          behavior: 'TextInput'
+#          context: 'default'
+#          textInputButtonTitle: 'Acknowledge'
+#          textInputPlaceholder: '...'
   
 ####################################################
 #                                                  #
@@ -113,6 +134,7 @@ ios:
 ####################################################
 alexa: !include alexa.yaml
 automation: !include_dir_merge_list automation/
+binary_sensor: !include binary_sensors.yaml
 camera: !include cameras.yaml
 device_tracker: !include device_trackers.yaml
 group: !include groups.yaml
@@ -144,7 +166,7 @@ updater:
 sun:
 conversation:
 frontend:
-#discovery:
+discovery:
 config:
 
 #####################################################################
