--- a/scripts/hvac_downstairs_heat.yaml
+++ b/scripts/hvac_downstairs_heat.yaml
@@ -1,7 +1,6 @@
 #####################################################################
 ### Heat for 1 hour
 #####################################################################
-
 heat_downstairs_60min:
   sequence:
     - service: climate.set_operation_mode
@@ -9,16 +8,11 @@ heat_downstairs_60min:
       data:
         operation_mode: 'Heat'
 
-    - service: climate.set_temperature
-      entity_id: climate.2gig_technologies_ct101_thermostat_iris_heating_1_18_1
-      data:
-        temperature: 84
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_heat
+        value: 84
 
-#    - service: notify.pushbullet
-#      data:
-#        title: "HVAC Event"
-#        target: "device/Chrome"
-#        message: "Downstairs Heat_60 started at {{ states('sensor.date__time') }}"
 ## notify iOS
     - service: notify.ios_iphwn666
       data:
@@ -27,15 +21,14 @@ heat_downstairs_60min:
 
     - delay: 01:00
 
-    - service: climate.set_temperature
-      entity_id: climate.2gig_technologies_ct101_thermostat_iris_heating_1_18_1
-      data:
-        temperature: 63
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_heat
+        value: 68
 
 #####################################################################
 ### Heat for 2 hours
 #####################################################################
-
 heat_downstairs_120min:
   sequence:
     - service: climate.set_operation_mode
@@ -43,16 +36,11 @@ heat_downstairs_120min:
       data:
         operation_mode: 'Heat'
 
-    - service: climate.set_temperature
-      entity_id: climate.2gig_technologies_ct101_thermostat_iris_heating_1_18_1
-      data:
-        temperature: 84
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_heat
+        value: 84
 
-#    - service: notify.pushbullet
-#      data:
-#        title: "HVAC Event"
-#        target: "device/Chrome"
-#        message: "Downstairs Heat_120 started at {{ states('sensor.date__time') }}"
 ## notify iOS
     - service: notify.ios_iphwn666
       data:
@@ -61,15 +49,14 @@ heat_downstairs_120min:
 
     - delay: 02:00
 
-    - service: climate.set_temperature
-      entity_id: climate.2gig_technologies_ct101_thermostat_iris_heating_1_18_1
-      data:
-        temperature: 63
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_heat
+        value: 68
 
 #####################################################################
 ### Heat for 3 hours
 #####################################################################
-
 heat_downstairs_180min:
   sequence:
     - service: climate.set_operation_mode
@@ -77,16 +64,11 @@ heat_downstairs_180min:
       data:
         operation_mode: 'Heat'
 
-    - service: climate.set_temperature
-      entity_id: climate.2gig_technologies_ct101_thermostat_iris_heating_1_18_1
-      data:
-        temperature: 86
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_heat
+        value: 84
 
-#    - service: notify.pushbullet
-#      data:
-#        title: "HVAC Event"
-#        target: "device/Chrome"
-#        message: "Downstairs Heat_180 started at {{ states('sensor.date__time') }}"
 ## notify iOS
     - service: notify.ios_iphwn666
       data:
@@ -95,7 +77,7 @@ heat_downstairs_180min:
 
     - delay: 03:00
 
-    - service: climate.set_temperature
-      entity_id: climate.2gig_technologies_ct101_thermostat_iris_heating_1_18_1
-      data:
-        temperature: 63
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_heat
+        value: 68
