--- a/sensors/hvac_upstairs.yaml
+++ b/sensors/hvac_upstairs.yaml
@@ -1,8 +1,6 @@
-
 #####################################################################
 ### HVAC Upstairs
 #####################################################################
-
 ## Median Temperature Upstairs
 - platform: statistics
   entity_id: sensor.2gig_technologies_ct101_thermostat_iris_temperature_24_1
@@ -10,118 +8,40 @@
 
 - platform: template
   sensors:
-    ## Upstairs Thermostat Mode
+## Upstairs Thermostat Mode
     hvac_upstairs_mode:
       friendly_name: "Upstairs Thermostat Mode"
-      # This automatically returns "unknown" if the state is not set
+## This automatically returns "unknown" if the state is not set
       value_template: "{{ states('climate.2gig_technologies_ct101_thermostat_iris_cooling_1_24_2') }}"
 
-    ## Upstairs Fan State
+## Upstairs Fan State
     hvac_upstairs_fan:
       friendly_name: "Upstairs HVAC Fan"
       value_template: "{{ (states.climate['2gig_technologies_ct101_thermostat_iris_cooling_1_24_2'].attributes|default({})).fan_state|default('unknown') }}"
 
-    ## Upstairs AC Temp Setpoint
+## Upstairs AC Temp Setpoint
     hvac_upstairs_ac_setpoint:
       friendly_name: "Upstairs AC Setpoint"
       value_template: "{{ (states.climate['2gig_technologies_ct101_thermostat_iris_cooling_1_24_2'].attributes|default({})).temperature|default('unknown') }}"
 
-    ## Upstairs Heat Temp Setpoint
+## Upstairs Heat Temp Setpoint
     hvac_upstairs_heat_setpoint:
       friendly_name: "Upstairs Heat Setpoint"
       value_template: "{{ (states.climate['2gig_technologies_ct101_thermostat_iris_heating_1_24_1'].attributes|default({})).temperature|default('unknown') }}"
 
     ## Upstairs Climate
-    hvac_upstairs_climate:
-      friendly_name: "Upstairs Climate"
-      value_template: >-
-        {% set temperature = states.sensor['2gig_technologies_ct101_thermostat_iris_temperature_24_1'].state|default(0)|float %}
-
-        {% if not temperature %}
-          {{ states('sensor.2gig_technologies_ct101_thermostat_iris_temperature_24_1') }}
-        {% elif 68.5 <= temperature <= 83.5 %}
-          Comfy
-        {% elif temperature < 68.5 %}
-          Cold
-        {% elif temperature > 83.5 %}
-          Hot
-        {% else %}
-          {{ temperature }}
-        {% endif %}
-
-
-
-#### Original config before Dale's fixes:
-######################################################################
-#### HVAC Upstairs
-######################################################################
-#
-### Median Temperature Upstairs
-#- platform: statistics
-#  entity_id: sensor.2gig_technologies_ct101_thermostat_iris_temperature_24_1
-#  name: Upstairs Thermostat Statistics
-#
-### Upstairs Thermostat Mode
-#- platform: template
-#  sensors:
-#    hvac_upstairs_mode:
-#      friendly_name: "Upstairs Thermostat Mode"
-#      value_template: >-
-#        {%- if states('climate.2gig_technologies_ct101_thermostat_iris_cooling_1_24_2') != None -%}
-#          {{ states('climate.2gig_technologies_ct101_thermostat_iris_cooling_1_24_2') }}
-#        {%- else -%}
-#          Unknown
-#        {%- endif -%}
-#
-#- platform: template
-#  sensors:
-#    hvac_upstairs_fan:
-#      friendly_name: "Upstairs HVAC Fan"
-#      value_template: >-
-#        {%- if states.climate['2gig_technologies_ct101_thermostat_iris_cooling_1_24_2'].attributes.fan_state != None -%}
-#          {{ states.climate['2gig_technologies_ct101_thermostat_iris_cooling_1_24_2'].attributes.fan_state }}
-#        {%- else -%}
-#          Unknown
-#        {%- endif -%}
-#
-### Upstairs AC Temp Setpoint
-#- platform: template
-#  sensors:
-#    hvac_upstairs_ac_setpoint:
-#      friendly_name: "Upstairs AC Setpoint"
-#      value_template: >-
-#        {%- if states.climate['2gig_technologies_ct101_thermostat_iris_cooling_1_24_2'].attributes.temperature != None -%}
-#          {{ states.climate['2gig_technologies_ct101_thermostat_iris_cooling_1_24_2'].attributes.temperature }}
-#        {%- else -%}
-#          Unknown
-#        {%- endif -%}
-#
-### Upstairs Heat Temp Setpoint
-#- platform: template
-#  sensors:
-#    hvac_upstairs_heat_setpoint:
-#      friendly_name: "Upstairs Heat Setpoint"
-#      value_template: >-
-#        {%- if states.climate['2gig_technologies_ct101_thermostat_iris_heating_1_24_1'].attributes.temperature != None -%}
-#          {{ states.climate['2gig_technologies_ct101_thermostat_iris_heating_1_24_1'].attributes.temperature }}
-#        {%- else -%}
-#          Unknown
-#        {%- endif -%}
-#
-### Upstairs Climate
-#- platform: template
-#  sensors:
 #    hvac_upstairs_climate:
-#      value_template: >-
-#        {%- if states.sensor['2gig_technologies_ct101_thermostat_iris_temperature_24_1'].state == None -%}
-#            Unknown
-#        {%- elif 69 <= states.sensor['2gig_technologies_ct101_thermostat_iris_temperature_24_1'].state|float <= 83.5 -%}
-#            Comfy
-#        {%- elif states("sensor.2gig_technologies_ct101_thermostat_iris_temperature_24_1") | float < 69 -%}
-#          Cold
-#        {%- elif states("sensor.2gig_technologies_ct101_thermostat_iris_temperature_24_1") | float > 83.5 -%}
-#          Hot
-#        {%- else -%}
-#            states.sensor['2gig_technologies_ct101_thermostat_iris_temperature_24_1'].state
-#        {%- endif %}
 #      friendly_name: "Upstairs Climate"
+#      value_template: >-
+#        {% set temperature = states.sensor['2gig_technologies_ct101_thermostat_iris_temperature_24_1'].state|default(0)|float %}
+#        {% if not temperature %}
+#          {{ states('sensor.2gig_technologies_ct101_thermostat_iris_temperature_24_1') }}
+#        {% elif 68.5 <= temperature <= 83.5 %}
+#          Comfy
+#        {% elif temperature < 68.5 %}
+#          Cold
+#        {% elif temperature > 83.5 %}
+#          Hot
+#        {% else %}
+#          {{ temperature }}
+#        {% endif %}
